@@ -1,5 +1,9 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-1.3.11:
+  * bug fix: calling a named function (e.g. a DEFUN) concurrently with
+    redefining that same function could lead to execution of random bytes.
+
 changes in sbcl-1.3.11 relative to sbcl-1.3.10:
   * minor incompatible change: SB-EXT:*INTEXP-MAXIMUM-EXPONENT* is removed.
   * enhancement: TRACE ... :REPORT {TRACE,NIL} now work as advertised in the
